tests/snapshots/examples_fixtures/type_classes__EqAuditLogExample__App__Service.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/EqAuditLogExample/App/Service.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `EqAuditLogExample.App.Service` doesn't match file path `examples/type_classes/EqAuditLogExample/App/Service.flx`.

  examples/type_classes/EqAuditLogExample/App/Service.flx:5:1
  |
5 | module EqAuditLogExample.App.Service {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
